IMPLEMENTACIÓN - Listado Breeds con Fragments
- Se implementan las dependencias necesarias para el uso de fragments.
- Se crean fragments para las variables cats y dogs respectivamente.
- Se implementa vista por fragments para las listas de mascotas navegando mediante los botones laterales.
- Se implementa singleton para evitar cargar nuevamente las listas cada vez que se navegue entre fragments.
- Se migra implementa arquitectura MVVM para la carga y consumo de REST API cats.
- Se refactorizan clases y sus nombres para mantener un orden con el nombre de estas.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+
+    //Fragment
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 }
